# dragon.ai

./: Cargo.toml  README.md  config.yml
architectures/: default.json
src/: api.rs  architecture.rs  config.rs  extractor.rs  gpu.rs  inference.rs  main.rs  params.rs  scanner.rs  setup.rs  tui.rs  update.rs
