 [package]
 name = "dragon"
 version = "0.1.0"
 edition = "2021"
 authors = ["Your Name <you@example.com>"]
 description = "Terminal-based universal AI runtime engine"
 license = "MIT"
 repository = "https://github.com/your-username/dragon.ai"

 [dependencies]
 anyhow = "1.0"
 axum = "0.8"
clap = { version = "=4.5.0", features = ["derive"] }
 colored = "2.0"
 dialoguer = "0.11"
 dirs = "5.0"
 indicatif = "0.17"
 memmap2 = "0.5"
 rayon = "1.7"
 ratatui = "0.23"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
 tokio = { version = "1", features = ["full"] }
 tokenizers = "0.15"
 walkdir = "2.4"

 [profile.release]
 opt-level = "z"
 codegen-units = 1
 lto = true
 strip = "symbols"
 panic = "abort"